# capstone-project

./: .pre-commit-config.yaml  app.js  async_await.js  callback.js  db.sqlite3  manage.py  package-lock.json  pdb_test.py  promise.js  pyproject.toml  pytest.ini  raw_sql_test.py
api/: admin.py  models.py  permissions.py  serializers.py  views.py
api/middlewares/: profiling_middleware.py
api/migrations/: 0001_initial.py  0002_member.py  0003_project_owner.py  0004_task_owner_alter_member_name_alter_project_owner.py
capstoneDjango/: asgi.py  settings.py  urls.py  views.py  wsgi.py
docs/adr/: 0001-use-nodejs-for-real-time-notifications.md
src/: DRY.py  Solid.py  django_profiling.py  factorial_profile.prof  messy.py  project_creation_profile.py  slugify.py
tests/: conftest.py  test_fixtures.py  test_projects.py  test_sample.py  test_slugify.py  test_tasks.py
web-socket-service/: app.js  client.js  forEach.js  index.html  package-lock.json  package.json  server.js
web-socket-service/.clinic/: 25438.clinic-doctor.html  46079.clinic-doctor.html
web-socket-service/.clinic/25438.clinic-doctor/: 25438.clinic-doctor-processstat  25438.clinic-doctor-systeminfo  25438.clinic-doctor-traceevent
web-socket-service/.clinic/46079.clinic-doctor/: 46079.clinic-doctor-systeminfo  46079.clinic-doctor-traceevent
web-socket-service/.clinic/46420.clinic-doctor/: 46420.clinic-doctor-processstat  46420.clinic-doctor-systeminfo  46420.clinic-doctor-traceevent
web-socket-service/.clinic/51741.clinic-bubbleprof/: 51741.clinic-bubbleprof-stacktrace  51741.clinic-bubbleprof-systeminfo
web-socket-service/__tests__/: matchers.test.js  mockfn.test.js  promises.test.js  wsServer.test.js
web-socket-service/coverage/: clover.xml  coverage-final.json  lcov.info
web-socket-service/coverage/lcov-report/: forEach.js.html  index.html  server.js.html
