[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = "developer accelerator course"
authors = ["SRatnaT <sailratna1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
djangorestframework = "^3.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
