[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = "developer accelerator course"
authors = ["SRatnaT <sailratna1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
requests = "^2.32.5"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
pre-commit = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "drf-yasg>=1.21.11",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "capstoneDjango/settings.py:E501"
]
